samples/_failures_safe/1761593218_afdaa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6dfe4f48.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_6dfe4f48.c:184:5: error: expected expression at end of input
  184 |     for (int i = 0; i < graph->vertices;
      |     ^~~
./samples/SAFE/__tmp_6dfe4f48.c:184:5: error: expected declaration or statement at end of input
